--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.10.0",
-    "prisma": "^4.12.0"
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "^4.12.0"
   }
 }
